Added ability to create custom generated files